tests/fixtures/diagnostics/type-checker/negative/public-boundary-intersection-alias/input.tysh
namespace Samples.Intersections.Negative

type Named = { Name: string }
type Aged = { Age: int }
type PersonLike = Named & Aged

export fun leak(value: PersonLike): PersonLike = value
